# Giga-ALU

./: CMakeLists.txt  README.md
examples/: demo.asm
include/alu/: alu.h
include/assembler/: assembler.h
include/parser/: parser.h
include/vm/: vm.h
src/: alu.c  isa.h  lexer.c  lexer.h  lexer_main.c  main.c  parser.c  parser.h  parser_main.c  vm.c  vm.h
src/alu/: alu.c
src/assembler/: assembler.c
src/lexer/: lexer.c
src/parser/: parser.c
src/vm/: vm.c
tests/: alu_tests.c  lexer_tests.c  parser_tests.c  vm_tests.c
